# exchange.yaml

appId: com.pampa.agilityforex.stg
name: Exchange Flow - Flutter Screenshots

---
- launchApp:
    clearState: true
- takeScreenshot:
    path: screenshots/1_applaunch
    

- tapOn:
    id: "currency-to-sell"
    label: "Tap on Currency I need to sell"
- tapOn: "USD"

  
- tapOn:
    id: "amount-to-sell"
    label: "Tap on Amount to sell"
- inputText: ${AMOUNTTOSELL}
- takeScreenshot: 
    path: screenshots/2_enteramount

- tapOn:
    id: "currency-to-Buy"
    label: "Tap on Currency I need to buy"
- tapOn: "EUR"


- tapOn: 
    id: 'btn-get-qoute'
- takeScreenshot: 
    path: screenshots/3_login_complete
